# embedded-sdmmc-rs

./: .Cargo.toml.swp  .Cargo_BASE_568.toml.swp  .Cargo_LOCAL_568.toml.swp  .Cargo_REMOTE_568.toml.swp  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cargo_BACKUP_568.toml  Cargo_REMOTE_568.toml  LICENSE-MIT  NOTICE  README.md
.github/workflows/: rust.yml  rust.yml.orig
examples/: append_file.rs  big_dir.rs  create_file.rs  create_test.rs  delete_file.rs  delete_test.rs  filter_test.rs  list_dir.rs  read_file.rs  readme_test.rs  shell.rs  test_mount.rs  volume_info_linux.rs  write_test.rs
examples/linux/: mod.rs
src/: blockdevice.rs  controller.rs  fat.rs  filesystem.rs  lib.rs  sdmmc.rs  sdmmc_proto.rs  structure.rs  volume_mgr.rs
src/common/: mod.rs
src/common/filesystem/: mod.rs  timestamp.rs
src/fat/: bpb.rs  fat_table.rs  info.rs  mod.rs  ondiskdirentry.rs  volume.rs
src/filesystem/: attributes.rs  cluster.rs  directory.rs  filename.rs  files.rs  handles.rs  mod.rs  search_id.rs  timestamp.rs
src/inner/: blockdevice.rs  mod.rs  volume_mgr.rs
src/inner/fat/: bpb.rs  info.rs  mod.rs  ondiskdirentry.rs  volume.rs
src/inner/filesystem/: directory.rs  filename.rs  files.rs  mod.rs
src/inner/sdcard/: mod.rs  proto.rs
src/sdcard/: device.rs  mod.rs  proto.rs  sd_card_device.rs  spi.rs
src/sdmmc/: mod.rs  spi.rs
tests/: directories.rs  open_files.rs  read_file.rs  read_file_with_seek.rs  volume.rs  write_file.rs
tests/utils/: mod.rs
