[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>", "Rust Embedded Community Developers"]
categories = ["embedded", "no-std"]
description = "A basic SD/MMC driver for Embedded Rust."
edition = "2021"
keywords = ["sdcard", "mmc", "embedded", "fat32"]
license = "MIT OR Apache-2.0"
name = "embedded-sdmmc"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/embedded-sdmmc-rs"
version = "0.9.0"

# Make sure to update the CI too!
rust-version = "1.76"

[dependencies]
byteorder = {version = "1", default-features = false}
defmt = {version = "0.3", optional = true}
embassy-sync-06 = { package = "embassy-sync", version = "0.6.2", optional = true }
embedded-hal = "1.0.0"
embedded-hal-bus-03 = { package = "embedded-hal-bus", version = "0.3.0", optional = true }
embedded-io = "0.6.1"
heapless = "^0.8"
log = {version = "0.4", default-features = false, optional = true}

[dev-dependencies]
chrono = "0.4"
embedded-hal-bus = "0.2.0"
env_logger = "0.10.0"
flate2 = "1.0"
hex-literal = "0.4.1"
sha2 = "0.10"

[features]
default = ["log", "embassy-sync-06", "embedded-hal-bus-03"]
defmt-log = ["dep:defmt"]
embassy-sync-06 = ["dep:embassy-sync-06"]
embedded-hal-bus-03 = ["dep:embedded-hal-bus-03"]
log = ["dep:log"]
